--- a/quarkus-social/src/main/resources/application.properties
+++ b/quarkus-social/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 quarkus.datasource.db-kind=postgresql 
-quarkus.datasource.username=becker
+quarkus.datasource.username=postgres
 quarkus.datasource.password=becker
 
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quarkus-social
