--- a/quarkus-social/src/main/resources/application.properties
+++ b/quarkus-social/src/main/resources/application.properties
@@ -9,14 +9,12 @@ quarkus.datasource.jdbc.max-size=16
 
 # TEST
 
-%test.quarkus.datasource.db-kind=h2 
+%test.quarkus.datasource.db-kind=h2
 %test.quarkus.datasource.username=sa
-%test.quarkus.datasource.password=sa
-
+%test.quarkus.datasource.password=
 %test.quarkus.datasource.jdbc.url=jdbc:h2:mem:quarkus-social
 %test.quarkus.datasource.jdbc.max-size=16
-
-%test.quarkus.hibernate-orm.database.database.generation=drop-and-create
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
 %test.quarkus.hibernate-orm.log.sql=true
 
 # Conexão MYSQL
