--- a/quarkus-social/src/main/resources/application.properties
+++ b/quarkus-social/src/main/resources/application.properties
@@ -7,6 +7,10 @@ quarkus.datasource.password=becker
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quarkus-social
 quarkus.datasource.jdbc.max-size=16
 
+#quarkus.smallrye-openapi.path=/swagger
+quarkus.swagger-ui.always-include=true
+
+
 # TEST
 
 %test.quarkus.datasource.db-kind=h2
